--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -21,34 +21,35 @@
         android:id="@+id/lBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
+        android:layout_below="@id/lTitle"
         android:layout_marginTop="25dp"
         android:orientation="vertical"
         android:paddingHorizontal="30dp">
 
-        <TextView
-            android:id="@+id/txt_BluetoothStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="5dp"
-            android:paddingVertical="10dp"
-            android:text="Bluetooth is Turn Off!"
-            android:textColor="#FFB00020"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
         <Button
-            android:id="@+id/btn_Switch"
+            android:id="@+id/btn_BTSwitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Turn on Bluetooth" />
 
         <Button
-            android:id="@+id/btn_find"
+            android:id="@+id/btn_BTFind"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="Find Bluetooth" />
+
+        <TextView
+            android:id="@+id/txt_BTStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="5dp"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            android:text="..."
+            android:textColor="#FFB00020"
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -59,19 +60,20 @@
         android:orientation="vertical"
         android:weightSum="100">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/A1_1"
+            android:padding="10dp"
+            android:text="Paired Bluetooth:"
+            android:textColor="#474747"
+            android:textSize="14sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="0dp"
+            android:layout_weight="50"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/A1_1"
-                android:padding="10dp"
-                android:text="Paired Bluetooth:"
-                android:textColor="#474747"
-                android:textSize="14sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -81,9 +83,9 @@
                     android:id="@+id/lPairedBluetooth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:divider="@android:color/transparent"
-                    android:dividerHeight="15dp"
-                    android:layout_marginTop="5dp" />
+                    android:dividerHeight="15dp" />
 
                 <TextView
                     android:id="@+id/txt_pairedDeviceEmpty"
@@ -98,20 +100,26 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical">
+            android:layout_height="50dp"
+            android:gravity="bottom">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:background="@color/A1_1"
                 android:padding="10dp"
                 android:text="Discovered Bluetooth:"
                 android:textColor="#474747"
                 android:textSize="14sp" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -121,9 +129,9 @@
                     android:id="@+id/lDiscoveredBluetooth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:divider="@android:color/transparent"
-                    android:dividerHeight="15dp"
-                    android:layout_marginTop="5dp" />
+                    android:dividerHeight="15dp" />
 
                 <TextView
                     android:id="@+id/txt_discoveredDeviceEmpty"
