--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -51,7 +51,7 @@
             android:id="@+id/lBluetoothDevice"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:orientation="vertical"
             android:weightSum="100">
 
@@ -68,7 +68,7 @@
             <ListView
                 android:id="@+id/lPairedBluetooth"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:paddingHorizontal="16dp"
                 android:layout_weight="50"
                 android:layout_marginTop="5dp"
@@ -88,7 +88,7 @@
             <ListView
                 android:id="@+id/lDiscoveredBluetooth"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:paddingHorizontal="16dp"
                 android:layout_weight="50"
                 android:layout_marginTop="5dp"
@@ -101,7 +101,7 @@
             android:id="@+id/lLogcat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <TextView
