--- a/app/src/main/res/layout/item_bluetooth.xml
+++ b/app/src/main/res/layout/item_bluetooth.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="90dp"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -30,9 +30,16 @@
             android:id="@+id/txt_MacAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:textColor="#474747"
             android:textSize="12sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/txt_class"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#2A6CDC"
+            android:textSize="10sp"
             android:textStyle="normal" />
     </LinearLayout>
 </LinearLayout>
